--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "88eaeecb-629d-4e39-a453-cd487a237cb3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
